--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
       <!--navigation-->  
         <nav>
-        <a href="./index.html"><span>WEB</span><span>STUDIO</span></a>
+        <p>WEBSTUDIO</p>
             <ul>
               <li><a href="">Studio</a></li>
               <li><a href="">Portfolio</a></li>
@@ -19,8 +19,8 @@
             </ul>
         </nav>
         <ul>
-            <li><a href="">info@devstudio.com</a></li>
-            <li><a href="">+11 (000) 111-11-11</a></li>
+            <li><a href="malto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
         </ul>
     </header>
 
@@ -84,12 +84,9 @@
  
     <!--Footer-->
     <footer>
-        <ul>
-            <li>
-                <a href="./index.html"><span>WEB</span><span>STUDIO</span></a>
+                <a href="./index.html">WEBSTUDIO</a>
                 <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
-            </li> 
-        </ul>
+         
     </footer>
 </body>
 </html>
