--- a/index.html
+++ b/index.html
@@ -11,17 +11,20 @@
     <header>
       <!--navigation-->  
         <nav>
-        <p>WEBSTUDIO</p>
+        <a href="./index.html">WEBSTUDIO</a>
             <ul>
               <li><a href="">Studio</a></li>
               <li><a href="">Portfolio</a></li>
               <li><a href="">Contacts</a></li>
             </ul>
         </nav>
-        <ul>
-            <li><a href="malto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
-        </ul>
+        <address>
+            <ul>
+                <li><a href="malto:info@devstudio.com">info@devstudio.com</a></li>
+                <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+            </ul>
+        </address>
+        
     </header>
 
     <main>
