--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>goit-markup-hw-01</title>
+    <title>WebStudio</title>
     <!-- website icon -->
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">      
 </head>
@@ -37,7 +37,7 @@
 
         <section>
             <!--Section_1-->
-            <h2 hidden>info</h2>
+            <h2 hidden>Advantages</h2>
              <ul>
                <li>
                   <h3>Strategy</h3>
